# TwinsRemote

./: .gitignore  README.md  README.txt  README_EN.md  README_HOST.txt
ExcludeAppsAudio/: ExcludeAppsAudio.slnx
ExcludeAppsAudio/ExcludeAppsAudio/: ExcludeAppsAudio.cpp  LoopbackCapture.cpp  LoopbackCapture.h
NvEnc/: NvEnc.cpp  NvEnc.slnx  build_nvenc.bat
NvEnc/NvEnc/: NvEnc.cpp
ProcessAudioCapture/: ProcessAudioCapture.slnx
ProcessAudioCapture/ProcessAudioCapture/: Common.h  LoopbackCapture.cpp  LoopbackCapture.h  ProcessAudioCapture.cpp
SystemMixCapture/: SystemMixCapture.slnx
SystemMixCapture/SystemMixCapture/: SystemMixCapture.cpp
TwinsRemoteHost/: TwinsRemoteHost.slnx
TwinsRemoteHost/TwinsRemoteHost/: App.config  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Form4.Designer.cs  Form4.cs  Form4.resx  ModeCreatorForm.Designer.cs  ModeCreatorForm.cs  ModeEditorForm.Designer.cs  ModeEditorForm.cs  ModeEditorForm.resx  NotificationsForm.Designer.cs  NotificationsForm.cs  ProcessSelectorForm.Designer.cs  ProcessSelectorForm.cs  ProcessSelectorForm.resx  Program.cs  TwinsRemoteHost.Designer.cs  TwinsRemoteHost.cs  TwinsRemoteHost.csproj  TwinsRemoteHost.resx
TwinsRemoteHost/TwinsRemoteHost/Properties/: Resources.Designer.cs  Settings.Designer.cs  Settings.settings
TwinsRemoteHost/TwinsRemoteHost/locales/: en-US.json  ja-JP.json  preset.json
audio_exclude_capture/: audio_exclude_capture.slnx
client/src/html/: index.html
client/src/js/: client.js
client/src/style/: style.css
document/client/: manual.md
document/host/: manual.md
host/: Cargo.toml
host/src/: audio_encoder.rs  consts.rs  dxgi_capture.rs  ffmpeg.rs  main.rs  webrtc_sender.rs
nvenc_rp/: nvenc_rp.slnx
nvenc_rp/nvenc_rp/: cl command.txt  nvenc_min.cpp  nvenc_rp.cpp
twins_remote_client/src/html/: index.html
twins_remote_client/src/js/: client.js
twins_remote_client_server/src/html/: index.html
twins_remote_client_server/src/js/: client.js
twins_remote_client_server/src/locales/: en-US.json  ja-JP.json  preset.json
twins_remote_client_server/src/style/: style.css
twins_remote_host/: .env.example  Cargo.toml
twins_remote_host/src/: audio_capture.rs  audio_encoder.rs  consts.rs  controller.rs  dxgi_capture.rs  env.rs  ffmpeg.rs  main.rs  webrtc_sender.rs
vps_signal_server/: .env.example  Cargo.toml
vps_signal_server/src/: env.rs  main.rs
