[package]
name = "twins_remote_host"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version="1", features=["full"] }
webrtc = "0.11"
rustls = { version = "0.23", features=["ring"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"

windows = { version="0.56", features=[
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common"
] }
bytes = "1"
anyhow = "1"
opus = "0.3.1"
cpal = "0.17.3"
vigem-client = "0.1.4"
dotenvy = "0.15"
reqwest = { version="0.12", default-features = false, features = ["json", "rustls-tls"] }
