[package]
name = "vps_signal_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
base64 = "0.22"
sha1 = "0.11"
hmac = "0.13.0"
rand = "0.10.1"
